# laika-th

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: init.sh
src/: config.rs  main.rs
src/game/: mod.rs  routes.rs  storage.rs
web/: .prettierrc  eslint.config.js  index.html  package.json  tailwind.config.js
web/src/: App.tsx
web/src/components/: Button.tsx
web/src/components/TicTacToe/: Cell.tsx  GameBoard.tsx  index.tsx
